@@ -1,6 +1,7 @@
 Change log next version
 -----------------------
 * Added missing class, PowerMockTestCase, to testng full release jar (issue 327).
+* Fixed test initialization error when using PowerMock Mockito API in Ant (issue 333)
 
 Change log 1.4.9 (2011-05-02)
 -----------------------------
